# Qwen2OpenAI-Combatible-

./: README.md
qwen2api/: README.md  debug-collect.bat  debug-collect.ps1  pyproject.toml  requirements.txt  run_logged.py  server.py  start.bat  start.ps1
qwen2api/qwen2openai/: __init__.py  __main__.py  auth.py  client.py  config.py  models.py  router.py  server.py  stream.py  tools.py  upload.py
